[gd_scene format=3 uid="uid://2iwh462m5nkg"]

[ext_resource type="Script" uid="uid://dwro21mfxil57" path="res://Script/main_menu.gd" id="1_o3nbu"]
[ext_resource type="AudioStream" uid="uid://dbftdgsjq52s2" path="res://Audio/HoverBtn.mp3" id="2_6nqpc"]
[ext_resource type="Texture2D" uid="uid://slx5aa6a4v38" path="res://Sprite/UI/Main-quit.png" id="3_6nqpc"]
[ext_resource type="Texture2D" uid="uid://dfcuolcr5av18" path="res://Sprite/main.png" id="3_v3p41"]
[ext_resource type="Texture2D" uid="uid://b45gy27gy4nrx" path="res://Sprite/UI/Main-start.png" id="4_qf8tx"]

[node name="MainMenu" type="Node2D" unique_id=1890432678]
script = ExtResource("1_o3nbu")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="." unique_id=157520326]
position = Vector2(-582, 142)
stream = ExtResource("2_6nqpc")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1012366862]
scale = Vector2(1.65, 1.65)
texture = ExtResource("3_v3p41")

[node name="QuBtn" type="Button" parent="." unique_id=191794542]
offset_left = -746.0
offset_top = 150.0
offset_right = -358.0
offset_bottom = 357.0
icon = ExtResource("3_6nqpc")
flat = true

[node name="stbtn" type="Button" parent="." unique_id=102860869]
offset_left = -618.0
offset_top = -119.0
offset_right = -231.0
offset_bottom = 87.0
icon = ExtResource("4_qf8tx")
flat = true

[node name="Camera2D" type="Camera2D" parent="." unique_id=1516083846]
zoom = Vector2(0.61, 0.61)

[connection signal="button_down" from="QuBtn" to="." method="_on_qu_btn_button_down"]
[connection signal="button_down" from="stbtn" to="." method="_on_stbtn_button_down"]
